--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
 						</div>
 					</a>
 				</div>
-				<div class="col-md-3 text-center col-padding animate-box">
+<!-- 				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/portfolio-5.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
@@ -453,7 +453,7 @@
 						</div>
 					</a>
 				</div>
-				<div class="col-md-3 text-center col-padding animate-box">
+				<div class="col-md-3 text-center col-padding animate-box"> -->
 					<a href="portfolio/19-D.html" class="work" style="background-image: url(images/portfolio-8.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
@@ -578,7 +578,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Hire Me!</h2>
 					<p>I am extremely grateful for the time you have spent reading about me. Fill free to contact me at anytime...</p>
-					<p><a href="#" class="btn btn-default btn-lg">Contact Me</a></p>
+					<p><a href="tel:+268 79600117" class="btn btn-default btn-lg">Contact Me</a></p>
 				</div>
 			</div>
 		</div>
