--- a/index.html
+++ b/index.html
@@ -453,7 +453,8 @@
 						</div>
 					</a>
 				</div>
-				<div class="col-md-3 text-center col-padding animate-box"> -->
+-->
+				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="portfolio/19-D.html" class="work" style="background-image: url(images/portfolio-8.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
