--- a/index.html
+++ b/index.html
@@ -421,14 +421,14 @@
 						</div>
 					</a>
 				</div>
-<!-- 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-4.jpg);">
+				<div class="col-md-3 text-center col-padding animate-box">
+						<a href="portfolio/19-D.html" class="work" style="background-image: url(images/portfolio-8.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
-							<span>Design</span>
+							<span>19-D Resturent</span>
 						</div>
 					</a>
-				</div> -->
+				</div>
 <!-- 				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/portfolio-5.jpg);">
 						<div class="desc">
@@ -454,14 +454,14 @@
 					</a>
 				</div>
 -->
-				<div class="col-md-3 text-center col-padding animate-box">
+<!-- 				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="portfolio/19-D.html" class="work" style="background-image: url(images/portfolio-8.jpg);">
 						<div class="desc">
 							<h3>Project Name</h3>
 							<span>19-D Resturent</span>
 						</div>
 					</a>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</div>
