--- a/index.html
+++ b/index.html
@@ -400,8 +400,8 @@
 				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="portfolio/cozy.html" class="work" style="background-image: url(portfolio/assets/img/portfolio/cozy.png);">
 						<div class="desc">
-							<h3>Cosy Conditioners</h3>
-							<span>Air Conditioner Website</span>
+							<h3>Cosy Air Conditioners</h3>
+							<span>Website Dev</span>
 						</div>
 					</a>
 				</div>
@@ -409,23 +409,23 @@
 					<a href="portfolio/warehouse.html" class="work" style="background-image: url(portfolio/assets/img/portfolio/main_shot.png);">
 						<div class="desc">
 							<h3>AJ Warehouse</h3>
-							<span>Desktop Application</span>
+							<span>Desktop Application Dev</span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-3.jpg);">
+					<a href="" class="work" style="background-image: url(images/portfolio-3.jpg);">
 						<div class="desc">
-							<h3>Project Name</h3>
-							<span>Illustration</span>
+							<h3>Air Reservation System</h3>
+							<span> Web Application Dev</span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-						<a href="portfolio/19-D.html" class="work" style="background-image: url(images/portfolio-8.jpg);">
+						<a href="portfolio/19-D.html" class="work" style="background-image: url(assets/img/portfolio/19d1.png);">
 						<div class="desc">
-							<h3>Project Name</h3>
-							<span>19-D Resturent</span>
+							<h3>19-D Resturent</h3>
+							<span>Website Dev</span>
 						</div>
 					</a>
 				</div>
