--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-						<a href="portfolio/19-D.html" class="work" style="background-image: url(assets/img/portfolio/19d1.png);">
+						<a href="portfolio/19-D.html" class="work" style="background-image: url(images/19d1.png);">
 						<div class="desc">
 							<h3>19-D Resturent</h3>
 							<span>Website Dev</span>
