--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 						<li><span class="first-block">Full Name:</span><span class="second-block">Mlamuli Ntsika Mbingo</span></li>
 						<li><span class="first-block">Phone:</span><span class="second-block">+ 268 79700117 <br>+268 76056191</span></li>
 						<li><span class="first-block">Email:</span><span class="second-block">mlamulimbingo@gmail.com</span></li>
-						<li><span class="first-block">Website:</span><span class="second-block">https://codeman20.github.io/portfolio.github.io</span></li>
+						<li><span class="first-block">Website:</span><span class="second-block">codeman20.github.io/portfolio.github.io</span></li>
 						<li><span class="first-block">Address:</span><span class="second-block">Moneni Manzini Eswatini</span></li>
 					</ul>
 				</div>
