--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Hi am &mdash; Mlamuli</title>
+	<title>Hi i'm &mdash; Mlamuli</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="html5, css3, mobile first, responsive" />
@@ -86,13 +86,13 @@
 						<li><span class="first-block">Full Name:</span><span class="second-block">Mlamuli Ntsika Mbingo</span></li>
 						<li><span class="first-block">Phone:</span><span class="second-block">+ 268 79700117 <br>+268 76056191</span></li>
 						<li><span class="first-block">Email:</span><span class="second-block">mlamulimbingo@gmail.com</span></li>
-						<li><span class="first-block">Website:</span><span class="second-block">codeman20.github<br>.io/portfolio.github.io</span></li>
+						<li><span class="first-block">Website:</span><span class="second-block">codeman20.github.io/<br>portfolio.github.io</span></li>
 						<li><span class="first-block">Address:</span><span class="second-block">Moneni Manzini Eswatini</span></li>
 					</ul>
 				</div>
 				<div class="col-md-8">
 					<h2>Hi There!</h2>
-					<p> Am Mlamuli, am a highly motivated and hardworking individual, have been exposed to Software Development for 3 years now, where I have successfully completed many software related courses during this time. I have worked with both desktop and web-based applications, android development, multi-threaded application as well as front-end development using the latest web technologies. I have extensive experience with Java and some of the recently developed tech trends.</p>
+					<p> I'm Mlamuli, i'm a highly motivated and hardworking individual, have been exposed to Software Development for 3 years now, where I have successfully completed many software related courses during this time. I have worked with both desktop and web-based applications, android development, multi-threaded application as well as front-end development using the latest web technologies. I have extensive experience with Java and some of the recently developed tech trends.</p>
 					<p>
 						<ul class="fh5co-social-icons">
 							<li><a href="#"><i class="icon-github"></i></a></li>
